--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>hello world</header>
+    <header>
+        <div class="menu">
+            <div class="logo">
+                <h3>MUSIC APP</h3><br>
+                <!-- <i class="fa-solid fa-music"></i> -->
+                <img src="img/logo.png" alt="">
+            </div>
+
+            <div class="home-round">
+                <button class="home-part"><i class="fa-solid fa-house"></i>&nbsp;&nbsp;&nbsp;&nbsp;<h3 style="font-size: 20px;"> Home</h3></button>
+            </div>
+            <div class="home">             
+                <div class="all">
+                    <i  class="fa-solid fa-table-cells-large"></i>&nbsp;&nbsp;&nbsp;<h3>Categories</h3>
+                </div>
+                <div class="all">
+                    <i class="fa-solid fa-heart"></i>&nbsp;&nbsp;&nbsp;<h3>Favorite</h3>
+                </div>
+                <div class="all">
+                    <i class="fa-solid fa-book"></i>&nbsp;&nbsp;&nbsp;<h3>Library</h3>
+                </div>
+                <div class="all">
+                    <i class="fa-solid fa-gear"></i>&nbsp;&nbsp;&nbsp;<h3>Setting</h3>
+                </div>
+                <div class="all">
+                    <i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;&nbsp;<h3>Log out</h3>
+                </div>
+
+            </div>
+
+        </div >
+
+        <div class="navigation">
+            <h3>Navigation</h3>
+        </div>
+
+    </header>
 </body>
 </html>
